# unite

./: CMakeLists.txt  README.md  Unite.cpp  english-spanish.txt  translator.py  unite.drawio  unite.py  unite.spec
docs/: dictionary.txt  index.html
pynite/: dictionary.txt  unite.py
